--- a/LRSIceRink.csproj
+++ b/LRSIceRink.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Communication.Email" Version="1.0.0-beta.1" />
     <PackageReference Include="Blazorise.Bootstrap" Version="1.1.2" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.1.2" />
     <PackageReference Include="Blazorise.LoadingIndicator" Version="1.1.2" />
